# hs-tar-conduit

./: tar-conduit.cabal
Codec/Archive/: Tar.hs
Codec/Archive/Tar/: Read.hs  Types.hs
test/: test-tar.hs
