name:            tar-conduit
version:         0.4.1.0
license:         BSD3
license-file:    LICENSE
author:          Bjorn Bringert <bjorn@bringert.net>
                 Duncan Coutts <duncan@community.haskell.org>
maintainer:      Duncan Coutts <duncan@community.haskell.org>
copyright:       2007 Bjorn Bringert <bjorn@bringert.net>
                 2008-2015 Duncan Coutts <duncan@community.haskell.org>
category:        Codec
synopsis:        Reading, writing and manipulating ".tar" archive files.
description:     This library is for working with \"@.tar@\" archive files. It
                 can read and write a range of common variations of archive
                 format including V7, USTAR, POSIX and GNU formats. It provides
                 support for packing and unpacking portable archives. This
                 makes it suitable for distribution but not backup because
                 details like file ownership and exact permissions are not
                 preserved.
build-type:      Simple
cabal-version:   >=1.8

flag old-time

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag prof
    Description:   Turn on profiling settings
    Default:       False

library
  build-depends: base == 4.*, filepath,
                 bytestring, directory
                 , conduit
                 , conduit-extra
                 , mtl
                 , transformers
                 , utf8-string

  if flag(old-time)
    build-depends: directory < 1.2, old-time
  else
    build-depends: directory >= 1.2, time

  exposed-modules:
    Codec.Archive.Tar
    Codec.Archive.Tar.Entry
    Codec.Archive.Tar.Check

  other-modules:
    Codec.Archive.Tar.Types
    Codec.Archive.Tar.Read
    Codec.Archive.Tar.Write
    Codec.Archive.Tar.Pack
    Codec.Archive.Tar.Unpack

  extensions:
    DeriveDataTypeable

  ghc-options: -Wall -fno-warn-unused-imports

  if flag(dev)
      cpp-options:   -DDEVELOPMENT
      ghc-options:   -O0
  else
      ghc-options:   -O

  if flag(prof)
      ghc-options:   -fprof-auto

executable test-tar
  main-is:        test-tar.hs
  hs-source-dir:  test
  build-depends:    base
                  , tar-conduit
                  , bytestring
                  , mtl
                  , transformers
                  , time
                  , filepath
                  , directory
                  , conduit
                  , conduit-extra
                  , resourcet
                  , utf8-string
  extensions:
    DeriveDataTypeable

  ghc-options: -Wall -fno-warn-unused-imports
